
===============================================================================
Tag Creator: njn01 
Tag Date:    19 April 2010
Tag Name:    pop2/trunk_tags/ccsm_pop_2_1_20100419
Tag Testing:  inspection of pop2.buildnml.csh script; inspection of high-freq output files;
              1-month + 1-month ecosys + cfc case (functionality test)

Tag Summary: additional MOAR support
              * correction to netCDF units attribute for HDIFS, UES, VNS, WTS (gram/kilogram)
              * ocn.cfc.setup.csh modifications to support OCN_TAVG_TRACER_BUDGET
              * revised gx1v6 high-frequency tavg_contents file (additional surface fluxes included)
              * pop2_in_build.csh -- deactivate budget diagnostics if high-freq output is active
                   
M           22311   source/advection.F90
M           22408   source/horizontal_mix.F90
M           22311   input_templates/ocn.cfc.setup.csh
M           22408   input_templates/gx1v6_tavg_contents_high_freq
M           22315   input_templates/pop2_in_build.csh

===============================================================================
Tag Creator: njn01 
Tag Date:    15 April 2010
Tag Name:    pop2/trunk_tags/ccsm_pop_2_1_20100415
Tag Testing:  *  customized testing: OCN_TAVG_TRACER_BUDGET and OCN_TAVG_HIFREQ TRUE & FALSE
              *  comparison oob vs ccsm4_0_beta48 (2-month, er test comparing restart and tavg history files)
                     o pop.h.0001-02.nc files are identical
                     o pop.h.nday1.0001-02-01.nc are identical
                     o pop.r.0001-03-01-00000 restart files (end of February) are identical

            
Tag Summary: MOAR support
              * pop2.cpl7.template responds to new CCSM4 run-time environment variables
                 OCN_TAVG_TRACER_BUDGET and OCN_TAVG_HIFREQ
              * new input_templates file containing tavg tracer budget terms
              * new gx1v6 high-frequency tavg_contents file